--- a/style.css
+++ b/style.css
@@ -13,43 +13,47 @@ body {
     position: relative;
   }
   
-  .container * {
+  .container * { /*to select all elements or an specific element in this case*/
     position: absolute;
   }
   
   .house {
     top: 50%;
-    left: 75px;
+    left: 69px;
     height: 200px;
-    width: 260px;
+    width: 264px;
     background: rgb(170, 154, 12);
-  }
-  .house::before {
+}
+
+  .house::before { /* to insert something before the content of each element*/
     content: '';
     position: absolute;
     top: -95px;
-    left: 31px;
-    height: 183px;
-    width: 190px;
+    left: 34px;
+    height: 184px;
+    width: 192px;
     background: rgb(170, 154, 12);
-    transform: rotate(45deg);
-    border-top: 15px solid blue;
-    border-left: 15px solid blue;
+    transform: rotate(44deg);
+    border-top: 5px solid #de00ff;
+    border-left: 5px solid #de00ff;
     z-index: 2;
   }
-  .house::after {
+  .house::after {  /* to insert something after the content of each element*/
     content: '';
     position: absolute;
-    top: -70px;
+    top: -75px;
     left: 15px;
     height: 70px;
     width: 30px;
-    background: rgb(12, 189, 130);
+    background: rgb(170 154 12);
     z-index: 1;
-    border-top: 7px solid rgba(0, 0, 0, .3);
+    border-top: 5px solid #de00ff;
+    border-left: 2px solid #DE00FE;
+    border-right: 2px solid #de00ff;
   }
+
   .window {
-    top: 35px;
+    top: 33px;
     left: 25px;
     height: 80px;
     width: 70px;
@@ -58,31 +62,39 @@ body {
     border-top: 7px solid rgb(190, 103, 31);
     border-bottom: 7px solid rgb(190, 103, 31);
   }
+
   .window::before,
   .window::after {
     content: '';
     position: absolute;
     background: silver;
   }
+
   .window::before {
     top: 0;
     left: 50%;
-    height: 100%;
-    width: 1px;
+    height: 99%;
+    width: 4px;
   }
+
   .window::after {
     top: 50%;
-    height: 1px;
+    height: 4px;
     width: 100%;
   }
+
   .door {
     top: 70px;
     left: 150px;
-    height: 130px;
+    height: 128px;
     width: 70px;
     background: rgba(255, 115, 0, 0.678);
     z-index: 3;
+    border-top: 2px solid rgb(190 103 31);
+    border-left: 2px solid rgb(190 103 31);
+    border-right: 2px solid rgb(190 103 31);
   }
+
   .door::before {
     content: '';
     position: absolute;
@@ -91,6 +103,6 @@ body {
     height: 7px;
     width: 7px;
     border-radius: 50%;
-    border: 1px solid #FFF;
+    border: 1px solid rgb(170 154 12);
     background: #96ebff;
   }
